Fix the desgn that is out of place

--- a/css/screen.less
+++ b/css/screen.less
@@ -119,7 +119,7 @@ td, th {
     border-color: #E4E4E4;
 }
 
-.clampo { margin-top: -8em; padding: 70px 0;color: #fff; background: url(https://assets-cdn.aebian.org/aebian.org/Train_Small.jpg) no-repeat center center; background-size: cover; }
+.clampo { margin-top: -8.1em; padding: 70px 0;color: #fff; background: url(https://assets-cdn.aebian.org/aebian.org/Train_Small.jpg) no-repeat center center; background-size: cover; }
 .clampo h2 { margin: 0; font-size: 3em; }
 .clampo ul { margin-bottom: 0; }
 
@@ -424,9 +424,15 @@ div#mw-panel {
     top: 280px !important;
 }
 
+.navbar-nav > li > a {
+	padding-bottom: 20px !important;
+}
+
+/*
 .navbar {
     border: 0px !important;
 }
+*/
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     color: #8b171f !important;
